--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ build = "src/build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror = "1.0"
