--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "map_of_indexes"
+name = "map-of-indexes"
 version = "0.1.0"
 edition = "2021"
 publish = false # Comment this line out before publishing
