--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "map-of-indexes"
 version = "0.1.0"
 edition = "2021"
-publish = false # Comment this line out before publishing
+# publish = false # Comment this line out before publishing
 authors = ["Kraktus"]
 description = "A vec-backed map"
 repository = "https://github.com/kraktus/map-of-indexes"
