--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "map-of-indexes"
-version = "0.1.1"
+version = "0.1.2-dev"
 edition = "2021"
-# publish = false # Comment this line out before publishing
+publish = false # Comment this line out before publishing
 authors = ["Kraktus"]
 description = "A vec-backed map"
 repository = "https://github.com/kraktus/map-of-indexes"
