--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2-dev"
 edition = "2021"
 publish = false # Comment this line out before publishing
 authors = ["Kraktus"]
-description = "A vec-backed map"
+description = "A compact key-value map for unique but not dense indexes"
 repository = "https://github.com/kraktus/map-of-indexes"
 license = "AGPL-3.0+"
 readme = "README.md"
